--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,51 @@ aside {
   padding-bottom: 5px;
 }
 
-footer p {
-  text-align: center;
+/* FOOTER */
+
+footer {
+  font-weight: bold;
+  background-color: black;
+  color: white;
+  height: auto;
+  display: flex;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+footer .socialmedia {
+  display: flex;
+}
+
+footer .socialmedia i {
+  font-size: 25px;
+  margin-right: 15px;
+  color: white;
+}
+
+footer .socialmedia i a {
+  text-decoration: none;
+}
+
+footer .socialmedia a {
+  transition: .3s;
+}
+
+footer .socialmedia a:hover {
+  transform: rotate(25deg);
+}
+
+footer .socialmedia i.fa-facebook:hover {
+  color: #3b5998;
+}
+
+footer .socialmedia i.fa-youtube:hover {
+  color: #CD201F
+}
+
+footer .socialmedia i.fa-twitter:hover {
+  color: #00acee;
 }
